--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.img-parfum {
+    width: 200px;
+}
+
+.img-hair-mask {
+    width: 200px;
+}
+
+.profile-img {
+    width: 200px;
+}
+
+
 * {
     margin: 0;
     padding: 0;
