--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@
     width: 200px;
 }
 
-margin: 0;
+* {
+    margin: 0;
 padding: 0;
 box-sizing: border-box;
+}
+
+body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 1.6;
+    background-color: #5A2A27;
+    color:#5A2A27
+    padding: 20px;
+}
