--- a/style.css
+++ b/style.css
@@ -20,6 +20,6 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.6;
     background-color: #5A2A27;
-    color:#5A2A27
+    color:#333
     padding: 20px;
 }
