--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ box-sizing: border-box;
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.6;
-    background-color: #5A2A27;
+    background-color: #C4BBAF;
     color:#333
     padding: 20px;
 }
