--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ box-sizing: border-box;
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.6;
-    background-color: #C4BBAF;
+    background-color: #ece9e4;
     color:#333
     padding: 20px;
 }
@@ -27,4 +27,10 @@ body {
 h1, h2 {
     color: #2c3e50;
     margin-bottom: 10px;
+}
+
+p {
+    margin-bottom: 15px;
+    font-size: 1rem;
+    line-height: 1.8;
 }
