--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
 }
 
 nav {
-    background-color: #3498db;
+    background-color: #1b3a4f;
     padding: 10px;
     position: sticky;
     top: 0;
@@ -51,4 +51,48 @@ nav ul {
     list-style: none;
     display: flex;
     justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+main {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+article {
+    flex: 2;
+    padding: 15px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.img-parfum {
+    float: right;
+    width: 200px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+section {
+    flex: 1;
+    padding: 15px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
