--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.6;
     background-color: #ece9e4;
-    color:#333
+    color:#333;
     padding: 20px;
 }
 
